--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-
+# SERVER
+server.port=8081
+# HIBERNATE
+spring.jpa.hibernate.ddl-auto=create-drop
+# DATASOURCE
+spring.datasource.url=jdbc:mysql://localhost:3306/ticket-service
+spring.datasource.username=root
+spring.datasource.password=
+# Security
+oauth.jwt.secret=secret_key
+# ActiveMQ
+amq.url=tcp://localhost:61616
+amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
+spring.activemq.broker-url=${amq.url}${amq.queryParameters}
