--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ oauth.jwt.secret=secret_key
 amq.url=tcp://localhost:61616
 amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
+destination.delete_flight=Consumer.TicketService.VirtualTopic.delete_flight
